--- a/examples/software_sandbox.html
+++ b/examples/software_sandbox.html
@@ -50,14 +50,14 @@
 				info.innerHTML = '<a href="http://threejs.org" target="_blank">three.js<a/> - software renderer<br/>drag to change the point of view';
 				container.appendChild( info );
 
-				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 1000 );
-				camera.position.z = 600;
+				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 100 );
+				camera.position.z = 6;
 
 				controls = new THREE.TrackballControls( camera );
 
 				scene = new THREE.Scene();
 
-				var geometry = new THREE.TorusKnotGeometry( 150 );
+				var geometry = new THREE.TorusKnotGeometry( 1.5, 0.5 );
 
 				for ( var i = 0, j = geometry.faces.length; i < j; i ++ ) {
 
@@ -70,7 +70,7 @@
 
 				// Plane
 
-				var geometry = new THREE.BoxGeometry( 200, 200, 200 );
+				var geometry = new THREE.BoxGeometry( 2, 2, 2 );
 
 				for ( var i = 0, j = geometry.faces.length; i < j; i ++ ) {
 
@@ -122,12 +122,12 @@
 
 				var timer = Date.now() - start;
 
-				torus.position.y = Math.sin( timer * 0.002 ) * 150;
-				torus.rotation.x = timer * 0.0003;
-				torus.rotation.z = timer * 0.0002;
+				// torus.position.y = Math.sin( timer * 0.002 ) * 150;
+				// torus.rotation.x = timer * 0.0003;
+				// torus.rotation.z = timer * 0.0002;
 
-				cube.rotation.x = timer * 0.0002;
-				cube.rotation.z = timer * 0.0003;
+				// cube.rotation.x = timer * 0.0002;
+				// cube.rotation.z = timer * 0.0003;
 
 
 				controls.update();
