--- a/examples/webgl_animation_skinning_blending.html
+++ b/examples/webgl_animation_skinning_blending.html
@@ -64,7 +64,7 @@
 				scene.add ( new THREE.AmbientLight( 0xaaaaaa ) );
 
 				var light = new THREE.DirectionalLight( 0xffffff, 1.5 );
-				light.position.set( 0, 0, 1000 );
+				light.position.set( 0, 0, 100 );
 				scene.add( light );
 
 				renderer = new THREE.WebGLRenderer( { antialias: true, alpha: false } );
@@ -200,17 +200,18 @@
 
 			function start() {
 
+				blendMesh.scale.multiplyScalar( 0.1 );
 				blendMesh.rotation.y = Math.PI * -135 / 180;
 				scene.add( blendMesh );
 
 				var aspect = window.innerWidth / window.innerHeight;
 				var radius = blendMesh.geometry.boundingSphere.radius;
 
-				camera = new THREE.PerspectiveCamera( 45, aspect, 1, 10000 );
-				camera.position.set( 0.0, radius, radius * 3.5 );
+				camera = new THREE.PerspectiveCamera( 45, aspect, 1, 1000 );
+				camera.position.set( 0.0, radius / 10, ( radius * 3.5 ) / 10 );
 
 				controls = new THREE.OrbitControls( camera );
-				controls.target.set( 0, radius, 0 );
+				controls.target.set( 0, radius / 10, 0 );
 				controls.update();
 
 				// Set default weights
@@ -218,12 +219,12 @@
 				blendMesh.applyWeight( 'walk', 1 / 3 );
 				blendMesh.applyWeight( 'run', 1 / 3 );
 
-				gui = new BlendCharacterGui(blendMesh);
+				gui = new BlendCharacterGui( blendMesh );
 
 				// Create the debug visualization
 
 				helper = new THREE.SkeletonHelper( blendMesh );
-				helper.material.linewidth = 3;
+				helper.material.linewidth = 0.3;
 				scene.add( helper );
 
 				helper.visible = false;
