--- a/examples/webgl_animation_skinning_morph.html
+++ b/examples/webgl_animation_skinning_morph.html
@@ -59,7 +59,7 @@
 
 			var SCREEN_WIDTH = window.innerWidth;
 			var SCREEN_HEIGHT = window.innerHeight;
-			var FLOOR = -250;
+			var FLOOR = -5;
 
 			var container,stats;
 
@@ -89,18 +89,18 @@
 
 				container = document.getElementById( 'container' );
 
-				camera = new THREE.PerspectiveCamera( 30, SCREEN_WIDTH / SCREEN_HEIGHT, 1, 10000 );
-				camera.position.z = 2200;
-
+				camera = new THREE.PerspectiveCamera( 30, SCREEN_WIDTH / SCREEN_HEIGHT, 0.1, 100 );
+				camera.position.z = 22;
+				
 				scene = new THREE.Scene();
 
-				scene.fog = new THREE.Fog( 0xffffff, 2000, 10000 );
+				scene.fog = new THREE.Fog( 0xffffff, 10, 250 );
 
 				scene.add( camera );
 
 				// GROUND
 
-				var geometry = new THREE.PlaneBufferGeometry( 16000, 16000 );
+				var geometry = new THREE.PlaneBufferGeometry( 160, 160 );
 				var material = new THREE.MeshPhongMaterial( { emissive: 0x888888 } );
 
 				var ground = new THREE.Mesh( geometry, material );
@@ -116,7 +116,7 @@
 				scene.add( new THREE.HemisphereLight( 0x111111, 0x444444 ) );
 
 				var light = new THREE.DirectionalLight( 0xebf3ff, 1.5 );
-				light.position.set( 0, 140, 500 ).multiplyScalar( 1.1 );
+				light.position.set( 0, 14, 50 ).multiplyScalar( 1.1 );
 				scene.add( light );
 
 				light.castShadow = true;
@@ -124,14 +124,14 @@
 				light.shadowMapWidth = 1024;
 				light.shadowMapHeight = 1024;
 
-				var d = 390;
+				var d = 7;
 
 				light.shadowCameraLeft = -d;
 				light.shadowCameraRight = d;
-				light.shadowCameraTop = d * 1.5;
-				light.shadowCameraBottom = -d;
+                light.shadowCameraTop = d * 1.5;
+                light.shadowCameraBottom = -d;
 
-				light.shadowCameraFar = 3500;
+				light.shadowCameraFar = 120;
 				//light.shadowCameraVisible = true;
 
 				// RENDERER
@@ -162,7 +162,7 @@
 
 					console.log( 'materials', materials );
 
-					createScene( geometry, materials, 0, FLOOR, -300, 60 )
+					createScene( geometry, materials, 0, FLOOR, -10, 1 )
 
 					// GUI
 
@@ -235,7 +235,7 @@
 
 				mesh2 = new THREE.SkinnedMesh( geometry, new THREE.MeshFaceMaterial( materials ) );
 				mesh2.name = "Lil' Bro Mesh";
-				mesh2.position.set( x - 240, y - bb.min.y * s, z + 500 );
+				mesh2.position.set( x - 5, y - bb.min.y * s, z + 10 );
 				mesh2.scale.set( s / 2, s / 2, s / 2 );
 				mesh2.rotation.y = THREE.Math.degToRad( 60 );
 
@@ -246,7 +246,7 @@
 				scene.add( mesh2 );
 
 				helper = new THREE.SkeletonHelper( mesh );
-				helper.material.linewidth = 3;
+				helper.material.linewidth = 0.3;
 				helper.visible = false;
 				scene.add( helper );
 
@@ -656,12 +656,12 @@
 
 				var delta = 0.75 * clock.getDelta();
 
-				camera.position.x += ( mouseX - camera.position.x ) * .05;
-				camera.position.y = THREE.Math.clamp( camera.position.y + ( - mouseY - camera.position.y ) * .05, 0, 1000 );
+				camera.position.x += ( ( mouseX / 100 ) - camera.position.x ) * .05;
+				camera.position.y = THREE.Math.clamp( camera.position.y + ( (  - mouseY / 100 ) - camera.position.y ) * .05, 0, 1000 );
 
 				camera.lookAt( scene.position );
 
-				if( mixer ) {
+				if ( mixer ) {
 					mixer.update( delta );
 					helper.update();
 				}
