--- a/examples/webgl_camera_cinematic.html
+++ b/examples/webgl_camera_cinematic.html
@@ -30,7 +30,7 @@
 			var camera, scene, raycaster, renderer;
 
 			var mouse = new THREE.Vector2(), INTERSECTED;
-			var radius = 100, theta = 0;
+			var radius = 10, theta = 0;
 
 
 
@@ -49,9 +49,9 @@
 				info.style.textAlign = 'center';
 				info.innerHTML = '<a href="http://threejs.org" target="_blank">three.js</a> webgl - interactive cubes';
 				container.appendChild( info );
-				camera = new THREE.CinematicCamera( 60, window.innerWidth / window.innerHeight, 1, 1000 );
-				camera.setLens(5);
-        		camera.position.set(2, 1, 500);
+				camera = new THREE.CinematicCamera( 60, window.innerWidth / window.innerHeight, .1, 100 );
+				camera.setLens(.5);
+        		camera.position.set(2, 1, 50);
 
 
 				scene = new THREE.Scene();
@@ -62,15 +62,15 @@
 				scene.add( light );
 
 
-				var geometry = new THREE.BoxGeometry( 20, 20, 20 );
+				var geometry = new THREE.BoxGeometry( 2, 2, 2 );
 
 				for ( var i = 0; i < 1500; i ++ ) {
 
 					var object = new THREE.Mesh( geometry, new THREE.MeshLambertMaterial( { color: Math.random() * 0xffffff } ) );
 
-					object.position.x = Math.random() * 800 - 400;
-					object.position.y = Math.random() * 800 - 400;
-					object.position.z = Math.random() * 800 - 400;
+					object.position.x = Math.random() * 80 - 40;
+					object.position.y = Math.random() * 80 - 40;
+					object.position.z = Math.random() * 80 - 40;
 
 					scene.add( object );
 
@@ -165,7 +165,7 @@
 				event.preventDefault();
 
 				mouse.x = ( event.clientX / window.innerWidth ) * 2 - 1;
-				mouse.y = - ( event.clientY / window.innerHeight ) * 2 + 1;
+				mouse.y = - ( event.clientY  / window.innerHeight ) * 2 + 1;
 
 			}
 
