--- a/examples/webgl_decals.html
+++ b/examples/webgl_decals.html
@@ -67,14 +67,14 @@
 		var decalHelper, mouseHelper;
 		var p = new THREE.Vector3( 0, 0, 0 );
 		var r = new THREE.Vector3( 0, 0, 0 );
-		var s = new THREE.Vector3( 10, 10, 10 );
+		var s = new THREE.Vector3( 1, 1, 1 );
 		var up = new THREE.Vector3( 0, 1, 0 );
 		var check = new THREE.Vector3( 1, 1, 1 );
 
 		var params = {
 			projection: 'normal',
-			minScale: 10,
-			maxScale: 20,
+			minScale: 1,
+			maxScale: 2,
 			rotate: true,
 			clear: function() {
 
@@ -94,13 +94,13 @@
 
 			scene = new THREE.Scene();
 
-			camera = new THREE.PerspectiveCamera( fov, window.innerWidth / window.innerHeight, 1, 1000 );
-			camera.position.z = 100;
+			camera = new THREE.PerspectiveCamera( fov, window.innerWidth / window.innerHeight, 1, 100 );
+			camera.position.z = 10;
 			camera.target = new THREE.Vector3();
 
 			controls = new THREE.OrbitControls( camera, renderer.domElement );
-			controls.minDistance = 50;
-			controls.maxDistance = 200;
+			controls.minDistance = 5;
+			controls.maxDistance = 20;
 
 			scene.add( new THREE.AmbientLight( 0x443333 ) );
 
@@ -115,14 +115,14 @@
 			var geometry = new THREE.Geometry();
 			geometry.vertices.push( new THREE.Vector3(), new THREE.Vector3() );
 
-			line = new THREE.Line( geometry, new THREE.LineBasicMaterial( { linewidth: 4 } ) );
+			line = new THREE.Line( geometry, new THREE.LineBasicMaterial( { linewidth: 1 } ) );
 			scene.add( line );
 
 			loadLeePerrySmith();
 
 			raycaster = new THREE.Raycaster();
 
-			mouseHelper = new THREE.Mesh( new THREE.BoxGeometry( 1, 1, 10 ), new THREE.MeshNormalMaterial() );
+			mouseHelper = new THREE.Mesh( new THREE.BoxGeometry(), new THREE.MeshNormalMaterial() );
 			mouseHelper.visible = false;
 			scene.add( mouseHelper );
 
@@ -188,7 +188,6 @@
 					intersection.point.copy( p );
 
 					var n = intersects[ 0 ].face.normal.clone();
-					n.multiplyScalar( 10 );
 					n.add( intersects[ 0 ].point );
 
 					intersection.normal.copy( intersects[ 0 ].face.normal );
@@ -211,8 +210,8 @@
 			var gui = new dat.GUI();
 
 			gui.add( params, 'projection', { 'From cam to mesh': 'camera', 'Normal to mesh': 'normal' } );
-			gui.add( params, 'minScale', 1, 30 );
-			gui.add( params, 'maxScale', 1, 30 );
+			gui.add( params, 'minScale', 0.1, 3 );
+			gui.add( params, 'maxScale', 0.1, 3 );
 			gui.add( params, 'rotate' );
 			gui.add( params, 'clear' );
 			gui.open();
@@ -239,7 +238,6 @@
 
 				mesh = new THREE.Mesh( geometry, material );
 				scene.add( mesh );
-				mesh.scale.set( 10, 10, 10 );
 
 				//scene.add( new THREE.FaceNormalsHelper( mesh, 1 ) );
 				//scene.add( new THREE.VertexNormalsHelper( mesh, 1 ) );
@@ -260,7 +258,7 @@
 				var m = new THREE.Matrix4();
 				var c = dir.clone();
 				c.negate();
-				c.multiplyScalar( 10 );
+				c.multiplyScalar( 1 );
 				c.add( p );
 				m.lookAt( p, c, up );
 				m = m.extractRotation( m );
